@@ -17,6 +17,43 @@ import org.junit.jupiter.api.Test;
 class ReachableValuesTest {
 
     @Test
+    void testSharedEntityValueRange() {
+        var v1 = new TestdataListEntityProvidingValue("V1");
+        var v2 = new TestdataListEntityProvidingValue("V2");
+        var v3 = new TestdataListEntityProvidingValue("V3");
+        var v4 = new TestdataListEntityProvidingValue("V4");
+        // A and B share an identical value range; C has a distinct one.
+        var a = new TestdataListEntityProvidingEntity("A", List.of(v1, v2, v3));
+        var b = new TestdataListEntityProvidingEntity("B", List.of(v1, v2, v3));
+        var c = new TestdataListEntityProvidingEntity("C", List.of(v3, v4));
+        var solution = new TestdataListEntityProvidingSolution();
+        solution.setEntityList(List.of(a, b, c));
+
+        var scoreDirector = mockScoreDirector(TestdataListEntityProvidingSolution.buildSolutionDescriptor());
+        scoreDirector.setWorkingSolution(solution);
+
+        var solutionDescriptor = scoreDirector.getSolutionDescriptor();
+        var entityDescriptor = solutionDescriptor.findEntityDescriptor(TestdataListEntityProvidingEntity.class);
+        var reachableValues = scoreDirector.getValueRangeManager()
+                .getReachableValues(entityDescriptor.getListVariableDescriptor());
+
+        // Both A and B must appear — addEntity must be called for each entity, not just the canonical one.
+        assertThat(reachableValues.extractEntitiesAsList(v1)).containsExactlyInAnyOrder(a, b);
+        assertThat(reachableValues.extractEntitiesAsList(v2)).containsExactlyInAnyOrder(a, b);
+        assertThat(reachableValues.extractEntitiesAsList(v3)).containsExactlyInAnyOrder(a, b, c);
+        assertThat(reachableValues.extractEntitiesAsList(v4)).containsExactlyInAnyOrder(c);
+
+        assertThat(reachableValues.isEntityReachable(v1, a)).isTrue();
+        assertThat(reachableValues.isEntityReachable(v1, b)).isTrue();
+        assertThat(reachableValues.isEntityReachable(v1, c)).isFalse();
+
+        // v3 appears in both the shared range [v1,v2,v3] and C's range [v3,v4]; co-values = union minus self.
+        assertThat(reachableValues.extractValuesAsList(v3)).containsExactlyInAnyOrder(v1, v2, v4);
+        assertThat(reachableValues.extractValuesAsList(v1)).containsExactlyInAnyOrder(v2, v3);
+        assertThat(reachableValues.extractValuesAsList(v4)).containsExactlyInAnyOrder(v3);
+    }
+
+    @Test
     void testReachableValuesByEntity() {
         var v1 = new TestdataListEntityProvidingValue("V1");
         var v2 = new TestdataListEntityProvidingValue("V2");
@@ -106,7 +143,7 @@ class ReachableValuesTest {
         var solutionDescriptor = scoreDirector.getSolutionDescriptor();
         var entityDescriptor = solutionDescriptor.findEntityDescriptor(TestdataAllowsUnassignedEntityProvidingEntity.class);
         var reachableValues = scoreDirector.getValueRangeManager()
-                .getReachableValues(entityDescriptor.getGenuineVariableDescriptorList().get(0));
+                .getReachableValues(entityDescriptor.getGenuineVariableDescriptorList().getFirst());
 
         assertThat(reachableValues.extractValuesAsList(v1)).containsExactlyInAnyOrder(v2, v3);
         assertThat(reachableValues.extractValuesAsList(v2)).containsExactlyInAnyOrder(v1, v3);
@@ -142,7 +179,7 @@ class ReachableValuesTest {
         var solutionDescriptor = scoreDirector.getSolutionDescriptor();
         var entityDescriptor = solutionDescriptor.findEntityDescriptor(TestdataAllowsUnassignedEntityProvidingEntity.class);
         var reachableValues = scoreDirector.getValueRangeManager()
-                .getReachableValues(entityDescriptor.getGenuineVariableDescriptorList().get(0),
+                .getReachableValues(entityDescriptor.getGenuineVariableDescriptorList().getFirst(),
                         new TestdataObjectSorter<TestdataAllowsUnassignedEntityProvidingSolution, TestdataValue>());
 
         assertThat(reachableValues.extractValuesAsList(v1)).containsExactlyInAnyOrder(v2, v3);
@@ -171,7 +208,7 @@ class ReachableValuesTest {
         var solutionDescriptor = scoreDirector.getSolutionDescriptor();
         var entityDescriptor = solutionDescriptor.findEntityDescriptor(TestdataAllowsUnassignedEntityProvidingEntity.class);
         var reachableValues = scoreDirector.getValueRangeManager()
-                .getReachableValues(entityDescriptor.getGenuineVariableDescriptorList().get(0),
+                .getReachableValues(entityDescriptor.getGenuineVariableDescriptorList().getFirst(),
                         new TestdataObjectSorter<TestdataAllowsUnassignedEntityProvidingSolution, TestdataValue>(false));
 
         assertThat(reachableValues.extractValuesAsList(v1)).containsExactlyInAnyOrder(v3, v2);
@@ -203,31 +240,31 @@ class ReachableValuesTest {
 
         // No sorter
         var noSorterValues = scoreDirector.getValueRangeManager()
-                .getReachableValues(entityDescriptor.getGenuineVariableDescriptorList().get(0), null);
+                .getReachableValues(entityDescriptor.getGenuineVariableDescriptorList().getFirst(), null);
         assertThat(noSorterValues.extractValuesAsList(v2)).containsExactlyInAnyOrder(v3, v1, v4, v5);
 
         // Ascending sorter replaces the no sorter
         var ascendingSorter = new TestdataObjectSorter<TestdataAllowsUnassignedEntityProvidingSolution, TestdataValue>(true);
         var ascendingValues = scoreDirector.getValueRangeManager()
-                .getReachableValues(entityDescriptor.getGenuineVariableDescriptorList().get(0), ascendingSorter);
+                .getReachableValues(entityDescriptor.getGenuineVariableDescriptorList().getFirst(), ascendingSorter);
         assertThat(ascendingValues).isNotSameAs(noSorterValues)
                 .isSameAs(scoreDirector.getValueRangeManager()
-                        .getReachableValues(entityDescriptor.getGenuineVariableDescriptorList().get(0), ascendingSorter));
+                        .getReachableValues(entityDescriptor.getGenuineVariableDescriptorList().getFirst(), ascendingSorter));
         assertThat(noSorterValues.extractValuesAsList(v2)).containsExactlyInAnyOrder(v1, v3, v4, v5);
 
         // Descending sorter
         var descendingSorter = new TestdataObjectSorter<TestdataAllowsUnassignedEntityProvidingSolution, TestdataValue>(false);
         var descendingValues = scoreDirector.getValueRangeManager()
-                .getReachableValues(entityDescriptor.getGenuineVariableDescriptorList().get(0), descendingSorter);
+                .getReachableValues(entityDescriptor.getGenuineVariableDescriptorList().getFirst(), descendingSorter);
         assertThat(descendingValues).isNotSameAs(ascendingValues)
                 .isNotSameAs(noSorterValues)
                 .isSameAs(scoreDirector.getValueRangeManager()
-                        .getReachableValues(entityDescriptor.getGenuineVariableDescriptorList().get(0), descendingSorter));
+                        .getReachableValues(entityDescriptor.getGenuineVariableDescriptorList().getFirst(), descendingSorter));
         assertThat(descendingValues.extractValuesAsList(v2)).containsExactlyInAnyOrder(v5, v4, v3, v1);
 
         // Null sorter returns the ascending sorter
         var otherNoSorterValues = scoreDirector.getValueRangeManager()
-                .getReachableValues(entityDescriptor.getGenuineVariableDescriptorList().get(0), ascendingSorter);
+                .getReachableValues(entityDescriptor.getGenuineVariableDescriptorList().getFirst(), ascendingSorter);
         assertThat(otherNoSorterValues).isSameAs(ascendingValues);
     }
 }
